# gtestdemo

./: CMakeLists.txt  README.md
gtest/: main.cpp  test.cpp  test1.cpp  testA.cpp  testA.h  testf.cpp  testf.h
include/: sample.h
main/: main.c
src/: sample.c
